--- a/index.html
+++ b/index.html
@@ -4,19 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>Ajax 1. Working with Ajax</title>
 </head>
 
 <body>
     <h1>Ajax 1. Working with Ajax</h1>
 
-    <form action="/backend.php" method="POST">
-        <p><input type="text" name="num1" id="num1"></p>
-        <p><input type="text" name="num2" id="num2"></p>
-        <button>GO</button>
-    </form>
-
+    <p>Число: <input type="text" name="num1" id="num1"></p>
+    <button>GO</button>
+    <script src="script.js" defer></script>
 </body>
 
 </html>
