--- a/index.html
+++ b/index.html
@@ -5,14 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <title>Ajax 1. Working with Ajax</title>
+    <title>Ajax Practice. Working with Ajax</title>
 </head>
 
 <body>
-    <h1>Ajax 1. Working with Ajax</h1>
+    <h1>Ajax Practice. Working with Ajax</h1>
 
-    <p>Число: <input type="text" name="num1" id="num1"></p>
-    <button>GO</button>
+    <div id="response">
+
+    </div>
+    <form action="" name="ourForm">
+        <input type="text" name="ourForm_inp" id="">
+        <button name="ourForm_btn">Отправить</button>
+    </form>
+    <script src="ajax.js" defer></script>
     <script src="script.js" defer></script>
 </body>
 
