Ajax - requests types/query string

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <title>Ajax Practice. Working with Ajax-2</title>
+    <title>Ajax Practice. Request Types</title>
 </head>
 
 <body>
-    <h1>Ajax Practice. Working with Ajax-2</h1>
+    <h1>Ajax Practice. Request Types</h1>
 
     <div id="response">
 
