--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <title>Ajax Practice. Request Types</title>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.js"></script>
+    <title>Ajax Practice. Promises & Axios</title>
 </head>
 
 <body>
-    <h1>Ajax Practice. Request Types</h1>
+    <h1>Ajax Practice. Promises & Axios</h1>
 
     <div id="response">
 
