--- a/index.html
+++ b/index.html
@@ -6,19 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.js"></script>
-    <title>Ajax Practice. Promises & Axios</title>
+    <title>Fetch & Promise</title>
 </head>
 
 <body>
-    <h1>Ajax Practice. Promises & Axios</h1>
+    <h1>Fetch & Promise</h1>
 
     <div id="response">
 
     </div>
-    <form action="" name="ourForm">
-        <input type="text" name="ourForm_inp" id="">
-        <button name="ourForm_btn">Отправить</button>
-    </form>
+    <ul class="posts"></ul>
     <script src="ajax.js" defer></script>
     <script src="script.js" defer></script>
 </body>
