--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.js"></script>
-    <title>Fetch & Promise</title>
+    <title>Fetch & Promise p.2</title>
 </head>
 
 <body>
-    <h1>Fetch & Promise</h1>
+    <h1>Fetch & Promise p.2</h1>
 
     <div id="response">
 
